# draton

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  RELEASE.md  docusaurus.config.ts  drat.tasks  draton.toml  install.ps1  install.sh  package.json  sidebars.ts  tsconfig.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  release.yml
.github/workflows/: ci.yml  (+5 more)
compiler/: README.md  draton.toml  main.dt
crates/drat/: Cargo.toml
crates/drat/src/: main.rs
crates/drat/src/commands/: add.rs  build.rs  fmt.rs  init.rs  lint.rs  remove.rs  selfhost_stage0.rs  task.rs
crates/drat/src/fmt/: items.rs  printer.rs
crates/drat/src/tooling/: tasks.rs
crates/drat/tests/: selfhost_stage0.rs  tooling_suite.rs
crates/draton-codegen/: Cargo.toml
crates/draton-codegen/src/: builtins.rs  closure.rs  codegen.rs  expr.rs  gc.rs  item.rs  lib.rs  mangle.rs  mono.rs  stmt.rs  types.rs  vtable.rs
crates/draton-codegen/tests/: classes.rs  closures.rs  integration.rs  literals.rs  ownership_corpus.rs  program_suite.rs  stmts.rs
crates/draton-lsp/: Cargo.toml
crates/draton-lsp/src/: analysis.rs  diagnostics.rs  main.rs
crates/draton-lsp/tests/: server.rs
crates/draton-runtime/: Cargo.toml
crates/draton-runtime/src/: lib.rs  panic.rs  platform.rs
crates/draton-runtime/src/scheduler/: channel.rs  coop.rs  coreroutine.rs  io.rs  mod.rs
crates/draton-runtime/tests/: scheduler_tests.rs
crates/draton-typeck/: Cargo.toml
crates/draton-typeck/src/: check.rs  error.rs  infer.rs  lib.rs  ownership.rs  typed_ast.rs
crates/draton-typeck/tests/: inference.rs  integration.rs  ownership.rs  ownership_integration.rs
docs/: DESIGN.md  canonical-syntax-rules.md  compiler-architecture.md  contributor-language-rules.md  early-preview.md  gc-scorecard.md  install.md  intro.md  language-analyst-artifact.md  language-architecture.md  language-class-diagram.md  language-manifesto.md  quickstart.md  release-notes-early-preview.md  release-workflow.md  roadmap-1year.md  selfhost-canonical-migration-status.md  selfhost-checklist.md  selfhost-roadmap.md  selfhost-zerodep-plan.md  syntax-migration.md
drat/: Cargo.toml
drat/src/: config.rs  main.rs
drat/src/commands/: ast_dump.rs  build.rs  doc.rs  fmt.rs  init.rs  lex_dump.rs  lint.rs  lsp.rs  publish.rs  repl.rs  run.rs  test.rs  type_dump.rs  update.rs
drat/src/fmt/: exprs.rs  items.rs  mod.rs  stmts.rs
drat/src/tooling/: files.rs  mod.rs  tasks.rs
drat/tests/: strict_syntax.rs
draton-codegen/: Cargo.toml
draton-codegen/src/: builtins.rs  closure.rs  codegen.rs  error.rs  expr.rs  gc.rs  item.rs  lib.rs  mono.rs  stmt.rs  types.rs  vtable.rs  windows_target_stubs.rs
draton-codegen/tests/: classes.rs  closures.rs  control_flow.rs  functions.rs  integration.rs  ownership_corpus.rs  program_suite.rs
draton-runtime/: Cargo.toml
draton-stdlib/: Cargo.toml
draton-stdlib/dt/: collections.dt  crypto.dt  fs.dt  io.dt  json.dt  math.dt  net.dt  os.dt  string.dt  test.dt  time.dt
draton-stdlib/src/: lib.rs
draton-stdlib/src/ffi/: fs.rs  io.rs  os.rs  time.rs
draton-stdlib/tests/: fs_tests.dt  fs_tests.rs  json_tests.dt  math_tests.dt  stdlib_tests.rs  string_tests.rs
examples/: hello.dt
results/: program_suite.txt  selfhost_phase1_corpus.txt  selfhost_phase1_debug.txt
scripts/: build-selfhost.sh  cargo_with_vendor_llvm.py  llvm_config_shim.rs  package_release.py  run_remote_phase1.py  smoke_release.py  vendor_llvm.py  write_windows_arm64_blocker.py
src/: main.dt  pipeline.dt  session.dt
static/: CNAME
tools/: capture_selfhost_parser_bt.py  check_selfhost_strict_subset.py  gc_compare_ocaml.py  gc_scorecard.py  probe_selfhost_doc_comment_only_blocks.py  probe_selfhost_header_dependencies.py  probe_selfhost_header_payloads.py  probe_selfhost_header_thresholds.py  probe_selfhost_main_prefixes.py  probe_selfhost_main_subsets.py  probe_selfhost_minimal_return_shapes.py  probe_selfhost_return_call_variants.py  probe_selfhost_spawn_doc_backtrace.py  probe_selfhost_spawn_doc_context_contrast.py  probe_selfhost_spawn_doc_header_thresholds.py  probe_selfhost_spawn_doc_tail_backtraces.py  probe_selfhost_spawn_doc_tail_body_prefixes.py  probe_selfhost_spawn_doc_tail_dispatch.py  probe_selfhost_spawn_doc_tail_dispatch_matrix.py  probe_selfhost_spawn_doc_tail_functions.py  probe_selfhost_spawn_doc_tail_keyword_dispatch.py  probe_selfhost_spawn_doc_tail_prefix_interactions.py  probe_selfhost_spawn_doc_tail_stmt_shapes.py  probe_selfhost_stmt1_body_variants.py  probe_selfhost_stmt1_operator_families.py  probe_selfhost_stmt1_variants.py  probe_selfhost_stmt34_adjacency.py  probe_selfhost_stmt34_block_separators.py  probe_selfhost_stmt34_branch_dependency.py  probe_selfhost_stmt34_condition_arities.py  probe_selfhost_stmt34_condition_commas.py  probe_selfhost_stmt34_condition_shapes.py  probe_selfhost_stmt34_doc_comment_blocks.py  (+20 more)
(+415 files in other folders)
