[package]
name = "draton-stdlib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
getrandom = "0.2"
libc = "0.2"
md5 = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
uuid = { version = "1", features = ["fast-rng", "v4"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
