[package]
name = "draton-codegen"
version = "0.1.0"
edition = "2021"

[features]
default = []
windows-target-stubs = []

[dependencies]
draton-ast = { path = "../draton-ast" }
draton-typeck = { path = "../draton-typeck" }
inkwell = { version = "0.7.1", features = ["llvm18-1"] }
thiserror = "1"

[dev-dependencies]
draton-lexer = { path = "../draton-lexer" }
draton-parser = { path = "../draton-parser" }
pretty_assertions = "1"
