[package]
name = "draton-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "draton-lsp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
lsp-types = "0.94"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
draton-ast = { path = "../draton-ast" }
draton-lexer = { path = "../draton-lexer" }
draton-parser = { path = "../draton-parser" }
draton-typeck = { path = "../draton-typeck" }
