[package]
name = "draton-runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
libc = "0.2"
crossbeam = "0.8"
draton-lexer = { path = "../draton-lexer" }
draton-parser = { path = "../draton-parser" }
draton-stdlib = { path = "../draton-stdlib" }
draton-typeck = { path = "../draton-typeck" }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"

[dev-dependencies]
pretty_assertions = "1"
