[package]
name = "draton-runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = ["scheduler", "std-io", "host-compiler"]
scheduler = ["dep:crossbeam", "dep:io-uring"]
std-io = []
host-compiler = ["dep:draton-lexer", "dep:draton-parser", "dep:draton-typeck", "dep:serde_json"]
coop-scheduler = []

[dependencies]
libc = "0.2"
crossbeam = { version = "0.8", optional = true }
draton-lexer = { path = "../draton-lexer", optional = true }
draton-parser = { path = "../draton-parser", optional = true }
draton-stdlib = { path = "../draton-stdlib" }
draton-typeck = { path = "../draton-typeck", optional = true }
serde_json = { version = "1", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.6", optional = true }

[dev-dependencies]
pretty_assertions = "1"
